package domain.game.behaviors;

public interface UIHandler {
    
    int promptForInsertionIndex(int maxIndex);
    
    void displayMessage(String message);
}

